--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yoonsung Ji"
   avatar           : "ysji.jpg"
-  bio              : "M.S. Student, Information System Laboratory ECE of Seoul National University"
+  bio              : "M.S. Student, |Information System Laboratory |ECE, Seoul National University"
   location         : "Seoul, South Korea"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
