--- a/_config.yml
+++ b/_config.yml
@@ -82,10 +82,12 @@ analytics:
 author:
   name             : "Yoonsung Ji"
   avatar           : "ysji.jpg"
-  bio              : "M.S. Student, |Information System Laboratory |ECE, Seoul National University"
+  bio              : "M.S. Student, 
+  |Information System Laboratory 
+  |ECE, Seoul National University"
   location         : "Seoul, South Korea"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  notion           : "https://feelgom.notion.site/Feelgom-s-Workspace-36050d801f144355a7e52614a41dca0a"
   googlescholar    : "https://scholar.google.com/citations?user=KaC0uMEAAAAJ&hl=ko"
   email            : "ysji@islab.snu.ac.kr"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
