--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Yoonsung Ji"
   avatar           : "ysji.jpg"
   bio              : "M.S. Student, 
-  |Information System Laboratory 
-  |ECE, Seoul National University"
+  Information System Laboratory 
+  ECE, Seoul National University"
   location         : "Seoul, South Korea"
   employer         :
   notion           : "https://feelgom.notion.site/Feelgom-s-Workspace-36050d801f144355a7e52614a41dca0a"
