--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,13 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  name        : "Yoonsung Ji"
+  uri         : "http://feelgom.github.io"
+  email       : "ysji@islab.snu.ac.kr"
+  bio         : ""
+  avatar      : "ysji.jpg"
+  twitter     : ""
+  google_plus : ""
 
 Name2 Name2:
   name        : "Name2 Name2"
