profile avatar update

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yoonsung Ji"
-  avatar           : "ysji.jpg"
+  avatar           : "ysji2.jpg"
   bio              : "M.S. Student, 
   Information System Laboratory 
   ECE, Seoul National University"
